--- a/src/pages/Course.css
+++ b/src/pages/Course.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    gap: 2.5rem;
 }
 .course-page-header{
     display: flex;
@@ -24,9 +25,12 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    overflow: auto;
+    padding: 2rem;
     width: 100%;
     height: 60%;
-    gap: 2.5rem;
+    gap: 2.0rem;
 
 }
 .course-card{
@@ -42,6 +46,10 @@
     box-shadow: 0 0 3px rebeccapurple;
     transition: all 0.5s ease;
     cursor: pointer;
+}
+.course-card:hover{
+    transform: scale(1.01);
+    box-shadow: 0 0 30px rebeccapurple;
 }
 .course-card-content-image{
     display: flex;
@@ -59,13 +67,9 @@
     width: 90%;
     height: 50%;
 }
-.course-card:hover{
-    transform: scale(1.01);
-    box-shadow: 0 0 30px rebeccapurple;
-}
 .add-new-course-container{
     width: 100%;
-    height: 10%;
+    height: 5%;
 }
 .add-new-course{
     width: 100px;
@@ -104,7 +108,7 @@
 
     font-size: 25px;
     position: absolute;
-    top: 15vw;
+    top: 16vw;
     left: 25%;
     width: 50%;
     height: 60%;
@@ -114,12 +118,14 @@
     border-radius: 10px;
     border: 3px solid rebeccapurple;
 
-
     transition: all 0.5s ease;
 
 }
-.add-new-course-form:active{
+.open-animation{
     transform: scale(1.1);
+}
+.close-animation{
+    transform: scale(0);
 }
 
 /*.AddCourse h1 {*/
