--- a/src/pages/NewForm.css
+++ b/src/pages/NewForm.css
@@ -3,6 +3,8 @@
     background: rgba(25, 3, 50, 0);
     color: var(--background-color);
     border: 3px solid rebeccapurple;
+    margin-inline-start: 1.3rem;
+    margin-inline-end: 1.3rem;
     transform: translateX(0%);
 
 }
